<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="app_logo">App logo</string>
    <string name="app_name">Fly Fish</string>
    <string name="app_setting_warn">sorry!your phone system just support global mode!</string>
    <string name="app_settings">App Settings</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_more">More…</string>
    <string name="btn_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="com.crashlytics.android.build_id">839f7cef-83ee-439e-bac8-4c4465b73381</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="config_not_set_value">Not set</string>
    <string name="config_url">Config URL</string>
    <string name="config_url_hint">ss://method:password@host:port</string>
    <string name="config_url_manual">Type manually</string>
    <string name="config_url_scan">Scan an QR code</string>
    <string name="config_url_scan_hint">Scan the QR code of your config url</string>
    <string name="connect">BACK TO CHINA</string>
    <string name="connect_fail">Connect Fail,Retry!</string>
    <string name="connect_mode">CONNECT MODE</string>
    <string name="connecting">CONNECTING…</string>
    <string name="default_web_client_id">719554316981-oumu0d62gdfnphiiqhq4t7mtduakgbf8.apps.googleusercontent.com</string>
    <string name="disconnect">ALREADY IN CHINA</string>
    <string name="disconnecting">DISCONNECTING…</string>
    <string name="err_invalid_url">The config URL is invalid.</string>
    <string name="error_invitation">Error invitation</string>
    <string name="excption_config_machine">your network available?</string>
    <string name="excption_invitecode_bit">Invitation code is 11 letters or numbers,pls check with your friend!</string>
    <string name="excption_invitecode_null">Invitation code cannot be empty!</string>
    <string name="exit_confirm_info">This will disconnect the VPN connection, Are you sure to exit?</string>
    <string name="fastscroll__app_name">RecyclerViewFastScroll</string>
    <string name="firebase_database_url">https://flyfish-49885.firebaseio.com</string>
    <string name="gcm_defaultSenderId">719554316981</string>
    <string name="global_mode">Global</string>
    <string name="google_api_key">AIzaSyAmA3LreoaXpRyPdIo8naMUqS1VnOyVCwc</string>
    <string name="google_app_id">1:719554316981:android:210ec166d85893e2</string>
    <string name="google_crash_reporting_api_key">AIzaSyAmA3LreoaXpRyPdIo8naMUqS1VnOyVCwc</string>
    <string name="google_storage_bucket">flyfish-49885.appspot.com</string>
    <string name="help_friend_title">Activate invitation code from your friend to aquire trial VIP</string>
    <string name="help_speed_up">Help friend</string>
    <string name="init">LOADING CONFIG</string>
    <string name="input_tip">Input invitation code first!</string>
    <string name="invitation_code">Loading invitation code…</string>
    <string name="invitation_code_note">INVITATION CODE USE INSTRUCTIONS \10\10 1.  Click the invitation code above and you have copied it to the clipboard. \10\10 2.  Send the invitation code to your friend and ask him download this app from google play.\10\10 3.  Have your friend open his app, click [help friend] button, enter the invitation code you sent and activate. then you obtain high-speed VIP for free, and your friend will obtain a one-month high-speed VIP trial.\10\10 4.  Speeding up is so simple ！Enjoy! ^_^</string>
    <string name="invite">Invite</string>
    <string name="invite_code_not_avalaible">Invite code is not avalible!Retry later!</string>
    <string name="invitecode_activate_tip">Your friend\'s invitation code activated! click [speed up] to be high-speed VIP!</string>
    <string name="local_mode">Local</string>
    <string name="member_common_type">MEMBER GRADE:COMMON || Click [Speed up]</string>
    <string name="member_trial_type">MEMBER GRADE:TRIAL VIP || Click [Speed up]</string>
    <string name="member_vip_type">MEMBER GRADE:HIGH-SPEED VIP</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_exit">Exit</string>
    <string name="menu_item_switch">Proxy</string>
    <string name="menu_item_toggle_global">Toggle global mode</string>
    <string name="network_tips_confirm">Confirm</string>
    <string name="network_tips_desc">Network is unavailable!</string>
    <string name="network_tips_title">Tips</string>
    <string name="project_id">flyfish-49885</string>
    <string name="proxied_apps">Per-App Proxy</string>
    <string name="rate_tips_confirm">Yes</string>
    <string name="rate_tips_deny">Not now</string>
    <string name="rate_tips_desc">Rate us 5 star to benefit more person!</string>
    <string name="rate_tips_title">Our app is free</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="select_app">Select App</string>
    <string name="select_app_detail">No</string>
    <string name="settings">SETTINGS</string>
    <string name="speed_up">Speed up</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tips_invitecode_copy">Invitation code is copied to the pasteboard!</string>
    <string name="update_tips_confirm">YES</string>
    <string name="update_tips_deny">EXIT</string>
    <string name="update_tips_desc">Latest version is still free and more stable！！！</string>
    <string name="update_tips_title">Update to latest version</string>
    <string name="vpn_confirm_button_tip">You need to click OK to Back to China!</string>
    <string name="vpn_connected_status">connected</string>
    <string name="vpn_disconnected_status">disconnected</string>
</resources>
