<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:padding="32dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="20sp" android:textColor="@android:color/black" android:id="@+id/update_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_tips_title"/>
    <TextView android:textSize="16sp" android:textColor="@android:color/black" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/update_tips_desc"/>
    <LinearLayout android:gravity="right" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
        <TextView android:textSize="22sp" android:textColor="#cccccc" android:id="@+id/update_cancel" android:background="@android:color/transparent" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20dp" android:text="@string/update_tips_deny"/>
        <TextView android:textSize="22sp" android:textColor="@color/colorPrimary" android:id="@+id/update_confirm" android:background="@android:color/transparent" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_tips_confirm"/>
    </LinearLayout>
</LinearLayout>
