<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@+id/ProxyUrlLayout" android:tag="ProxyUrl" android:padding="13dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/textViewProxyUrlTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/config_url"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textViewProxyUrl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/config_not_set_value"/>
    </LinearLayout>
    <View android:background="@android:color/darker_gray" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:alpha="0.4"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/AppSelectLayout" android:tag="AppSelect" android:padding="13dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/textViewAppSelectTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_app"/>
        <View android:background="@android:color/darker_gray" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:alpha="0.4"/>
        <Switch android:id="@+id/proxySwitch" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <View android:background="@android:color/darker_gray" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:alpha="0.4"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textViewAppSelectDetail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_app_detail"/>
    </LinearLayout>
    <View android:id="@+id/textViewAppSelectLine" android:background="@android:color/darker_gray" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:alpha="0.4"/>
    <ScrollView android:id="@+id/scrollViewLog" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textViewLog" android:padding="13dp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
    <TableRow android:layout_width="match_parent" android:layout_height="match_parent"/>
    <TableRow android:layout_width="match_parent" android:layout_height="match_parent"/>
    <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
        <FrameLayout android:layout_column="14"/>
    </TableRow>
</TableLayout>
